Upgrading some tests to Java 21